public: fix some layout bugs

--- a/public/scss/layout/_contribuir.scss
+++ b/public/scss/layout/_contribuir.scss
@@ -141,7 +141,7 @@
                 max-height: 25rem;
 
                 overflow: hidden;
-                overflow-y: scroll;
+                overflow-y: auto;
 
                 margin: 0;
                 padding-right: 2rem;
