--- a/public/scss/layout/_painel.scss
+++ b/public/scss/layout/_painel.scss
@@ -145,7 +145,7 @@
 
     .usuario .comentario {
         max-height: 20rem;
-        overflow-y: scroll;
+        overflow-y: auto;
     }
 
     /* #endregion */
