--- a/public/scss/pages/_cadastro-pedido.scss
+++ b/public/scss/pages/_cadastro-pedido.scss
@@ -94,7 +94,7 @@
             .alimentos-wrapper {
                 max-height: 50rem;
                 overflow: hidden;
-                overflow-y: scroll;
+                overflow-y: auto;
                 justify-content: flex-start;
                 padding-right: 2rem;
 
