--- a/public/scss/pages/_descobrir.scss
+++ b/public/scss/pages/_descobrir.scss
@@ -145,7 +145,7 @@
                                 white-space: nowrap;
                                 overflow-y: hidden;
                                 text-overflow: ellipsis;
-                                line-height: 1.5rem;
+                                line-height: 2.5rem;
                                 overflow-x: visible;
                                 &::-webkit-scrollbar {
                                     display: none;
