--- a/public/scss/pages/_pedido.scss
+++ b/public/scss/pages/_pedido.scss
@@ -199,7 +199,7 @@
         justify-content: flex-start;
         position: relative;
 
-        overflow-y: scroll;
+        overflow-y: auto;
         gap: 2rem;
     }
 
