--- a/public/scss/pages/_relatorio.scss
+++ b/public/scss/pages/_relatorio.scss
@@ -148,7 +148,7 @@
                     gap: 2rem;
 
                     overflow: hidden;
-                    overflow-y: scroll;
+                    overflow-y: auto;
 
                     .alimento {
                         justify-content: flex-start;
@@ -202,7 +202,7 @@
                         gap: 1rem;
 
                         overflow: hidden;
-                        overflow-y: scroll;
+                        overflow-y: auto;
 
                         .doador {
                             .row {
